--- a/javascript/effect/quizEffect02.html
+++ b/javascript/effect/quizEffect02.html
@@ -15,7 +15,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="../javascript01.html">Quiz</a> <em>주관식(여러문제) 유형</em></h1>
+        <h1><a href="../javascript01.html">Quiz</a> <em>주관식(문제를 입력해보기) 유형</em></h1>
         <nav>
             <ul>
                 <li><a href="quizEffect01.html">1</a></li>
