--- a/javascript/web_site.html
+++ b/javascript/web_site.html
@@ -89,103 +89,162 @@
                 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fa9buUse4J646SWPSoOw7ng%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D2%253A225" allowfullscreen></iframe>
                 <hr>
                 <div id="sample01" class="sample">
-                <h2 class="t_tit2">CSS코드</h2>
-                <p class="t_desc2">
-                    폰트는 'NexonLv1Gothic'를 이용하고 .card 클래스를 생성해 카드 Ui를 구현합니다.
-                </p>
-                    <div class="script">
-
-                        <div class="t_code">
-<pre><code class="language-js">@import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
-
-    .nexon {
-        font-family: 'NexonLv1Gothic';
-        font-weight: 400;
-    }
-
-    /* Reset */
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    a{
-        text-decoration: none;
-        color: #000;
-    }
-
-    img{
-        width: 100%;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-weight: normal;
-    }
-
-    /* common(공통) */
-    .container {
-        width: 1160px;
-        padding: 0 20px;
-        margin: 0 auto;
-    }
-
-    .section {
-        padding: 120px 0;
-        /*위 아래 */
-    }
-
-    .section>h2 {
-        /* > 이걸로 section 안에 있는 h2선택 */
-        font-size: 50px;
-        line-height: 1;
-        /* 1이라고 적으면 auto랑 똑같음 */
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .section>p {
-        font-size: 22px;
-        font-weight: 300;
-        color: #666;
-        text-align: center;
-        margin-bottom: 70px;
-    }
-
-    /* cardType */
-    .card__inner {
-        display: flex;
-        justify-content: space-between;
-        /*콘텐츠를 양쪽으로 정렬*/
-    }
-
-    .card {
-        width: 32%;
-        background-color: #f5f5f5;
-    }
-    .card__body {
-        padding: 24px;
-    }
-    .card__body .tit {
-        font-size: 24px;
-        margin-bottom: 10px;
-    }
-    .card__body .desc {
-        font-size: 18px;
-        line-height: 1.4;
-        color: #666;
-        margin-bottom: 20px;
-        font-weight: 300;
-    }
-    .card__body .btn {}
-    
+                    <h2 class="t_tit2">HTML 코드</h2>
+                    <p class="t_desc2">
+                        웹 표준을 준수하기 위해 태그는 시멘틱 태그를 사용해 작성하며 효율적인 코드 작성을 위해 div태그를 여러개 만드는것이 아닌 한 태그안에 클래스를 다중으로 삽입합니다.
+                    </p>
+                    <div class="result">
+                        <!-- 결과보기 -->
+                        <details>
+                            <summary class="t_box">코드보기</summary>
+                            <div class="sample03_result">
+                                <div class="script">
+                                    <div class="t_code">
+<pre><code class="language-html">&lt;section id="cardType" class="card__wrap nexon section"&gt;
+    &lt;!--다중 클래스 선택--&gt;
+    &lt;h2&gt;PS5 Controller User Guide 🎮&lt;/h2&gt;
+    &lt;p&gt;새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험1을 만끽하세요&lt;/p&gt;
+    &lt;div class="card__inner container"&gt;
+        &lt;article class="card"&gt;
+            &lt;figure class="card__header"&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card_bg01.jpg" alt="다양한 인터렉티브 반응"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;h3 class="tit"&gt;다양한 인터렉티브 반응&lt;/h3&gt;
+                &lt;p class="desc"&gt;인게임 기어 및 환경과 상호작용하면서 활시위를 당길 때 점점 팽팽해지는 느낌과 질주하는 자동차의 급브레이크를 밟는 느낌 등 액션과 함께 어우러집니다.&lt;/p&gt;
+                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card_bg02.jpg" alt="게임패드 지원"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;h3 class="tit"&gt;게임패드 지원&lt;/h3&gt;
+                &lt;p class="desc"&gt;내장 마이크를 사용하거나 3.5mm 잭에 미니멀하고 아이코닉한 헤드셋을 연결 전용 음소거 버튼을 사용하여 음성 캡처를 즉시 끌 수 있습니다.&lt;/p&gt;
+                &lt;a class="btn"  href="/"&gt;더 자세히 보기&lt;/a&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+        &lt;article class="card"&gt;
+            &lt;figure&gt;
+                &lt;!--img를 쓰기 위한 웹 표준 방법--&gt;
+                &lt;img src="img/card_bg03.jpg" alt="진동을 통한 생생한 현장감"&gt;
+            &lt;/figure&gt;
+            &lt;div class="card__body"&gt;
+                &lt;h3 class="tit"&gt;진동을 통한 생생한 현장감&lt;/h3&gt;
+                &lt;p class="desc"&gt;기존의 진동 모터 대신 듀얼 액추에이터가 선사하는 물리적 반응형 피드백을 경험해보세요, 게임 내 환경에서부터 실감 나는 역동적인 진동이 손을 타고 전해집니다.&lt;/p&gt;
+                &lt;a class="btn" href="/"&gt;더 자세히 보기&lt;/a&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+    &lt;/div&gt;
+&lt;/section&gt;
 </code></pre>
-                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </details>
+                        <!-- 결과보기 끝 -->
                     </div>
+                </div>
+                <div id="sample01" class="sample">
+                    <h2 class="t_tit2">CSS코드</h2>
+                    <p class="t_desc2">
+                        폰트는 'NexonLv1Gothic'를 이용하고 .card 클래스를 생성해 카드 Ui를 구현합니다.
+                    </p>
+                    <div class="result">
+                        <!-- 결과보기 -->
+                        <details>
+                            <summary class="t_box">코드보기</summary>
+                            <div class="sample03_result">
+                                <div class="script">
+                                    <div class="t_code">
+            <pre><code class="language-css">@import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
+.nexon {
+    font-family: 'NexonLv1Gothic';
+    font-weight: 400;
+
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+
+a{
+    text-decoration: none;
+    color: #000;
+
+img{
+    width: 100%;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+
+/* common(공통) */
+.container {
+    width: 1160px;
+    padding: 0 20px;
+    margin: 0 auto;
+
+.section {
+    padding: 120px 0;
+    /*위 아래 */
+
+.section&gt;h2 { /* "&gt;" 이걸로 section 안에 있는 h2선택 */
+    font-size: 50px;
+    line-height: 1; /* 1이라고 적으면 auto랑 똑같음 */
+    text-align: center;
+    margin-bottom: 20px;
+
+.section&gt;p {
+    font-size: 22px;
+    font-weight: 300;
+    color: #666;
+    text-align: center;
+    margin-bottom: 70px;
+
+/* cardType */
+.card__inner {
+    display: flex; /* 생성한 요소들을 flex로 정렬합니다. */
+    justify-content: space-between; /*창 크기에 맞게 좌우로 정렬합니다 */
+    /*콘텐츠를 양쪽으로 정렬*/
+
+.card {
+    width: 32%;
+    background-color: #f5f5f5;
+}
+.card__body {
+    padding: 24px;
+}
+.card__body .tit {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+.card__body .desc {
+    font-size: 18px;
+    line-height: 1.4;
+    color: #666;
+    margin-bottom: 20px;
+    font-weight: 300;
+}
+.card__body .btn {}
+            </code></pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </details>
+                        <!-- 결과보기 끝 -->
+                    </div>
+                </div>
+                <hr>
+                <h2 class="t_tit2">결과</h2>
+                <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
+                    <iframe src="https://kimsangjunv1.github.io/coding/site/cardType/cardType01.html" frameborder="0"></iframe>
                 </div>
                 <!-- 01번 메인 샘플 끝 -->
             </div>
