--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -50,11 +50,9 @@
             /*위 아래 */
         }
 
-        .section>h2 {
-            /* > 이걸로 section 안에 있는 h2선택 */
+        .section>h2 { /* ">" 이걸로 section 안에 있는 h2선택 */
             font-size: 50px;
-            line-height: 1;
-            /* 1이라고 적으면 auto랑 똑같음 */
+            line-height: 1; /* 1이라고 적으면 auto랑 똑같음 */
             text-align: center;
             margin-bottom: 20px;
         }
@@ -69,8 +67,8 @@
 
         /* cardType */
         .card__inner {
-            display: flex;
-            justify-content: space-between;
+            display: flex; /* 생성한 요소들을 flex로 정렬합니다. */
+            justify-content: space-between; /*창 크기에 맞게 좌우로 정렬합니다 */
             /*콘텐츠를 양쪽으로 정렬*/
         }
 
