--- a/javascript/web_site.html
+++ b/javascript/web_site.html
@@ -80,17 +80,15 @@
         <main id="main">
             <div class="document">
                 <!-- 01번 메인 샘플 시작 -->
-                <h2 class="t_tit2">사이트 만들기</h2>
-                <p class="t_desc">피그마로 사이트 예제를 만든 뒤 구체화 시켰습니다</p>
-                <hr>
-                <p class="t_desc2">
+                <h2 class="t_tit2">피그마를 통해 레이아웃 구성</h2>
+                <p class="t_desc2_css">
                     피그마를 이용해 그리드를 생성 후 각 규격에 맞게 요소들을 구성합니다.
                 </p>
                 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fa9buUse4J646SWPSoOw7ng%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D2%253A225" allowfullscreen></iframe>
                 <hr>
                 <div id="sample01" class="sample">
                     <h2 class="t_tit2">HTML 코드</h2>
-                    <p class="t_desc2">
+                    <p class="t_desc2_css">
                         웹 표준을 준수하기 위해 태그는 시멘틱 태그를 사용해 작성하며 효율적인 코드 작성을 위해 div태그를 여러개 만드는것이 아닌 한 태그안에 클래스를 다중으로 삽입합니다.
                     </p>
                     <div class="result">
@@ -148,9 +146,10 @@
                         <!-- 결과보기 끝 -->
                     </div>
                 </div>
+                <hr>
                 <div id="sample01" class="sample">
                     <h2 class="t_tit2">CSS코드</h2>
-                    <p class="t_desc2">
+                    <p class="t_desc2_css">
                         폰트는 'NexonLv1Gothic'를 이용하고 .card 클래스를 생성해 카드 Ui를 구현합니다.
                     </p>
                     <div class="result">
