--- a/javascript/web_standards.html
+++ b/javascript/web_standards.html
@@ -82,7 +82,7 @@
                 <!-- 01번 메인 샘플 시작 -->
                 <h2 class="t_tit">웹 표준을 위한 가이드라인</h2>
                 <h2 class="t_tit2">W3C 웹표준</h2>
-                <p class="t_desc2">
+                <p class="t_desc2_html">
                     W3C의 설립 취지는 웹의 지속적인 성장을 도모하는 프로토콜과 가이드라인을 개발하여 월드 와이드 웹의 모든 잠재력을 이끌어 내는 것이며, 설립 목적인 웹 표준과
                     가이드라인 개발을 수행하고 지금까지의 결과로 <i>지난 10년간 80여개의 W3C 권고안을 발표</i>하였습니다.<br>
                     그 덕에 많은 브라우저들이 탄생했음에도 W3C의 활동으로 인해 규칙이 정해져 통일된 웹 브라우저 환경이 조성되었습니다.
@@ -90,7 +90,7 @@
                 <hr>
                 <h2 class="t_tit">웹 표준</h2>
                 <h2 class="t_tit2">웹 표준이란?</h2>
-                <p class="t_desc2">
+                <p class="t_desc2_html">
                     1. 웹에서 표준적으로 사용되는 기술 또는 규칙 <br>
                     2. 표준화 단체인 <i>w3c가 권고한 표준안에 따라 웹사이트를 작성</i>해야한다. <br>
                     3. 표준 스펙을 잘 지키는 것 뿐만 아니라 <i>구조적 마크업과 표현 레이아웃 및 사용자 행쥐 제어를 잘 분리하는 구축 방식</i>이다.
@@ -108,7 +108,7 @@
                     5. 검색엔진 최적화가 가능하다
                 </p>
                 <h2 class="t_tit2">웹 표준을 준수하고 있는지 확인해보기</h2>
-                <p class="t_desc2">
+                <p class="t_desc2_html">
                     하단의 사이트를 통해 자신이 알아보고자 하는 웹 페이지가 웹표준을 준수하고 있는지 확인해볼 수 있으며, 웹사이트 이름에 마크업이라는 단어가 나왔는데 w3c의 웹 표준대로 html 코딩이 되었는가를 알려주는 사이트입니다.
                     <br><br>
                     W3C Markup 검증 서비스 : <a href="http://validator.kldp.org">http://validator.kldp.org</a>
@@ -116,7 +116,7 @@
                 <hr>
                 <h2 class="t_tit">웹 접근성</h2>
                 <h2 class="t_tit2">웹 접근성이란?</h2>
-                <p class="t_desc2">
+                <p class="t_desc2_html">
                     웹 접근성이란 「지능정보화기본법」에 따라 장애인이나 고령자분들이 웹 사이트에서 제공하는 정보를 장애인과 고령자 등등 동등하게 접근하고 이용 할 수 있도록 보장하는 것으로 웹 접근성 준수는 법적의무사항 이며 목적,인적,환경적 요인에 제약 없이 모든 웹 정보에 접근이 가능해야 합니다.
                 </p>
                 <h2 class="t_tit2">웹 접근성 지침 2.1</h2>
@@ -132,7 +132,7 @@
                 <hr>
                 <h2 class="t_tit">웹 호환성</h2>
                 <h2 class="t_tit2">웹 호환성이란?</h2>
-                <p class="t_desc2">
+                <p class="t_desc2_html">
                     1. 웹 표준을 준수해 <i>브라우저간의 호환성을 유지</i>시킵니다.<br>
                     2. 어느 웹 브라우저를 사용하던 <i>브라우저간에 출력되는 결과가 동일</i>하게 나오게끔 합니다.<br>
                     3. <i>표준 웹 기술을 활용해 최대한 공통된 요소를 사용</i>해서 웹페이지를 제작하고 어느 한쪽만의 요소를 사용하지 않아야 합니다.<br>
