--- a/sql/index.html
+++ b/sql/index.html
@@ -261,8 +261,9 @@ Query OK, 0 rows affected (0.01 sec)
 
                     <h3 id="intro5-5" class="page-header">테이블 복사</h3>
                     <div class="bs-callout bs-callout-info">
+                        CREATE TABLE 새로운 테이블명 SELECT * FORM 복사할 테이블 명
                     </div>
-<pre><code class="language-js">
+<pre><code class="language-js">CREATE TABLE member3 SELECT * FROM member;
 </code></pre>
                 </div>
                 <!-- //intro5 -->
@@ -400,13 +401,60 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES(
 
 
                     <h4 class="pt20">email 중에 web 텍스트를 시작하는 경우</h4>
-<pre><code class="language-js"> SELECT * FROM member WHERE youEmail LIKE 'web%'; //웹 뒤에는 아무것도 안나오게 %
+<pre><code class="language-js">SELECT * FROM member WHERE youEmail LIKE 'web%'; //웹 뒤에는 아무것도 안나오게 %
 </code></pre>
 
 
 
-                    <h4 class="pt20">email 중에 com 텍스트를 시작하는 경우</h4>
-<pre><code class="language-js"> SELECT * FROM member WHERE youEmail LIKE '%com'; //웹 뒤에는 아무것도 안나오게 %
+                    <h4 class="pt20">email 중에 com 텍스트를 끝 경우</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youEmail LIKE '%com'; //웹 뒤에는 아무것도 안나오게 %
+</code></pre>
+
+                    <h4 class="pt20">이름 중에 '김'으로 시작하는 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youName LIKE '김%'; 
+</code></pre>
+
+                    <h4 class="pt20">이름 중에 '김'씨 이거나 '황'씨인 경우 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youName LIKE '김%' or youName LIKE '황%'; 
+</code></pre>
+
+                    <h4 class="pt20">이름 중간에 '상'씨인 경우 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youName LIKE '_상_'; 
+    SELECT * FROM member WHERE youName LIKE '__연'; 
+</code></pre>
+
+                    <h4 class="pt20">이름 중간에 데이터가 없는 경우 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE IS NULL;
+SELECT * FROM member WHERE youName IS NOT NULL;
+</code></pre>
+
+                    <h4 class="pt20">멤버 중에 나이가 30 이상이면서 김씨인 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE IS NULL;
+SELECT * FROM member WHERE youName IS NOT NULL;
+</code></pre>
+
+                    <h4 class="pt20">멤버 중에 나이가 18 이상이면서 김씨인 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youAge >=18 AND youName LIKE '김%'; <!--'김__' 도 가능-->
+</code></pre>
+
+                    <h4 class="pt20">멤버 중에 나이가 18 이상이거나 김씨인 멤버 출력</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE youAge >=18 OR youName LIKE '김%';
+</code></pre>
+
+                    <h4 class="pt20">멤버 중에 나이가 20이상 이면서 (아이다가 2 또는 10인 멤버)</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE (myMemberID = 2 OR myMemberID = 10) AND youAge >= 20;
+</code></pre>
+
+                    <h4 class="pt20">회원 데이터 5개만 불러오기</h4>
+<pre><code class="language-js">SELECT * FROM member LIMIT 5;
+</code></pre>
+
+                    <h4 class="pt20">회원 데이터 5개만 불러오기 (6 번부터 10번)</h4>
+<pre><code class="language-js">SELECT * FROM member LIMIT 5, 5;
+</code></pre>
+
+                    <h4 class="pt20">회원 이메일을 기준으로 5개만 불러오기</h4>
+<pre><code class="language-js">SELECT youEmail FROM member LIMIT 5;
 </code></pre>
 
 
@@ -419,15 +467,35 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES(
                     <h4 class="pt20">모든 회원의 핸드폰 번호 변경</h4>
 <pre><code class="language-js">UPDATE member SET youPhone = "01000000000";
 </code></pre>
+                    <h4 class="pt20">아이디가 3번인 회원의 비밀번호를 '0123'</h4>
+<pre><code class="language-js">UPDATE member SET youPass = "0123" WHERE myMemberID = 3;
+</code></pre>
+                    <h4 class="pt20">아이디가 3번인 회원의 비밀번호를 '1234567'로 변경</h4>
+<pre><code class="language-js">UPDATE member SET youPass = "1234567" WHERE myMemberID between 5 and 10;;
+</code></pre>
+                    <h4 class="pt20">비밀번호를 "1234567"로 변경하고 내림차순으로 10개만 변경하기</h4>
+<pre><code class="language-js">UPDATE member SET youPass = "1234567" ORDER BY youPass DESC LIMIT 10;
+</code></pre>
 
 
 
 
-                    <h3 id="intro6-4" class="page-header">테이블 데이터</h3>
+
+                    <h3 id="intro6-4" class="page-header">테이블 삭제하기</h3>
                     <div class="bs-callout bs-callout-info">
-                        INSERT INTO 테이블 이름(필드명) VALUE(데이터)
+                        DELETE FROM 테이블명 조건
                     </div>
-<pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '04')
+                    <h4 class="pt20">회원 아이디가 5번인 멤버 삭제</h4>
+<pre><code class="language-js">delete from member where myMemberID between 7 and 9;
+</code></pre>
+                    <h4 class="pt20">회원 비밀번호가 '1234'인 멤버 삭제</h4>
+<pre><code class="language-js">delete from member where youPass='1234';
+</code></pre>
+                    <h4 class="pt20">회원 이름을 기준으로 5번째까지 멤버 삭제</h4>
+<pre><code class="language-js">delete from member ORDER BY youName LIMIT 5;
+</code></pre>
+                    <h4 class="pt20">지정한 멤버 삭제</h4>
+<pre><code class="language-js">delete from member WHERE myMemberID IN(7,9,10);
 </code></pre>
                 </div>
 
@@ -464,7 +532,77 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES(
                 </div>
                 </div>
 
-                 <!-- //intro1 -->
+                <!-- 인트로 8번 -->
+
+                <div class="bs-docs-section">
+                    <h2 id="intro8" class="page-header">테이블 합치기</h2>
+                    <h3 id="intro8-1" class="page-header">필드 JOIN</h3>
+                    <div class="bs-callout bs-callout-info">
+                        SELECT 필드명 FROM 테이블 명 앨리어스 JOIN 연결한 테이블명 앨리어스 ON(조건문);
+                    </div>
+<pre><code class="language-js"><pre><code class="language-js">create table myMember (
+    myMemberID int(10) unsigned auto_increment,
+    youEmail varchar(40) NOT NULL,
+    youName varchar(20) NOT NULL,
+    youPass varchar(20) NOT NULL,
+    youBirth int(20) NOT NULL,
+    youAge int(20) NOT NULL,
+    youPhone varchar(20) NOT NULL,
+    regTime int(20) NOT NULL,
+    PRIMARY KEY (myMemberID)
+) charset=utf8;
+
+create table myReview (
+    myReviewID int(10) unsigned auto_increment,
+    myMemberID int(10) unsigned,
+    youText tinytext NOT NULL,
+    regTime int(20) NOT NULL,
+    PRIMARY KEY (myReviewID)
+) charset=utf8;
+
+INSERT INTO myMember(youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404','20','01099991111','1234567');
+INSERT INTO myMember(youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303','20' ,'01099991111','1234567');
+INSERT INTO myMember(youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415','20' ,'01099991111','1234567');
+INSERT INTO myMember(youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('thdtjdgml415@naver.com', '이이이', '1234', '19970415','20' ,'01099991111','1234567');
+INSERT INTO myMember(youEmail, youName, youPass, youBirth, youAge, youPhone, regTime) VALUES('thdtjdgml415@naver.com', '김상이', '1234', '19970415','20' ,'01099991111','1234567');
+
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("1", "정말 감사합니다, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "음 별로, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("4", "와 대박, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("3", "장난 아니네요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("3", "이게 뭔, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "신고할게요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("1", "좋네요 너무, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("5", "꽤 괜찮은거 같아요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("2", "고소할게요, 너무 좋네요!!", "1234567");
+INSERT INTO myReview(myMemberID, youText, regTime) VALUES("4", "변호사 선임했습니다, 너무 좋네요!!", "1234567");
+
+SELECT m.youName, m.youEmail, r.youText, r.regTime FROM myMember m JOIN myReview r ON(m.myMemberID=r.myMemberID) ORDER BY myReviewID DESC LIMIT 5;
+
+</code></pre>
+</code></pre>
+                    <h4 class="pt20">member 테이블 핸드폰 번호 뒤에 성별 필드를 추가</h4>
+<pre><code class="language-js">ALTER TABLE member ADD youGender enum('m','w','x') default 'x' comment '남자 m, 여자 w' AFTER youPhone;
+</code></pre>
+                    <h3 id="intro8-2" class="page-header">필드 수정하가</h3>
+                    <div class="bs-callout bs-callout-info">
+                        ALTER TABLE 테이블명 MODIFY 수정할 필드명
+                    </div>
+                    <h4>전체 데이터 불러오기</h4>
+<pre><code class="language-js">ALTER TABLE member MODIFY youAge int(10);</code></pre>
+<!-- <pre><code class="language-js">ALTER TABLE member MODIFY youGender enum('m','w');</code></pre> -->
+                    <h3 id="intro8-2" class="page-header">필드 삭제하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        ALTER TABLE 테이블명 DROP 삭제시킬 필드명;
+                    </div>  
+                    <h4>전체 데이터 불러오기</h4>
+<pre><code class="language-js">ALTER TABLE member DROP youGender;
+</code></pre>
+                </div>
+                </div>
+                <!-- 인트로 8번 -->
+
+
                  <div class="bs-docs-section">
                     <h2 id="intro2" class="page-header">MySQL 설치</h2>
                     <div class="bs-callout bs-callout-info">
@@ -516,7 +654,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES(
                         <li><a href="#intro8">테이블 JOIN</a>
                             <li><a href="#intro6">테이블 데이터</a>
                                 <ul class="nav">
-                                    <li><a href="#intro6-1">데이터 입력하기</a></li>
+                                    <li><a href="#intro6-1">데이터 합치기</a></li>
                                     <li><a href="#intro6-2">데이터 불러오기</a></li>
                                     <li><a href="#intro6-3">데이터 수정하기</a></li>
                                     <li><a href="#intro6-4">데이터 삭제하기</a></li>
