--- a/javascript/effect/searchEffect03.html
+++ b/javascript/effect/searchEffect03.html
@@ -903,7 +903,7 @@
                     <span>z</span>
                 </div>
                 <div>총 속성 갯수 : <span class="num">0</span></div>
-                <div><span class="name"></span>의 찾은 속성 갯수 : <span class="num2">0</span></div>
+                <div>CSS 속성중에 '<span class="name">all</span>'로 시작하는 속성은 : <span class="num2">393</span>개 입니다.</div>
             </div>
             <div class="search__list">
 
