--- a/javascript/study/study_22.09/web_concat&reduce&reduceRight.html
+++ b/javascript/study/study_22.09/web_concat&reduce&reduceRight.html
@@ -85,12 +85,25 @@ const arrSpread = [...arrNum1, ...arrNum2];
                 2. 누적기에 대해 함수를 적용하고 배열의 각 값 (오른쪽에서 왼쪽으로)은 값을 단일 값으로 줄여야합니다.
             </p>
             <div class="t_code">
-<pre><code class="language-js">const arrNum1 = [100, 200, 300];
-const arrNum2 = [400, 500, 600];
-const arrConcat = arrNum1.concat(arrNum2);
+<pre><code class="language-js">//01. reduce
+const arrNum1 = [100, 200, 300, 400, 500];
+const arrReduce1 = arrNum1.reduce(element => element);
 
+const arrNum2 = [100, 200, 300, 400, 500];
+const arrReduce2 = arrNum2.reduce((p, c) => p + c);
 
-const arrSpread = [...arrNum1, ...arrNum2];
+const arrNum3 = [100, 200, 300, 400, 500];
+let sum = 0;
+for (let i = 0; i < arrNum3.length; i++) {
+    sum += arrNum3[i];
+}
+
+const arrNum4 = [[100, 200], [300, 400]];
+const arrReduce4 = arrNum4.reduce((p, c) => p.concat(c));
+
+//02. reduceRight
+const arrNum5 = ["javascript", "react", "vue"];
+const arrReduce5 = arrNum5.reduceRight((p, c) => p + c);
 </code></pre>
             </div>
             <div class="t_tit2">예시보기</div>
